@@ -2,11 +2,10 @@
 package com.yahoo.vespa.model.application.validation.change;
 
 import com.yahoo.config.model.api.ConfigChangeAction;
-import com.yahoo.config.model.api.ConfigChangeRefeedAction;
+import com.yahoo.config.model.api.ConfigChangeReindexAction;
 import com.yahoo.config.provision.Environment;
 import com.yahoo.vespa.model.VespaModel;
 import com.yahoo.vespa.model.application.validation.ValidationTester;
-import com.yahoo.vespa.model.search.AbstractSearchCluster;
 import org.junit.Test;
 
 import java.util.List;
@@ -17,41 +16,55 @@ import static org.junit.Assert.assertTrue;
 
 /**
  * @author bratseth
+ * @author bjorncs
  */
 public class IndexingModeChangeValidatorTest {
 
     @Test
-    public void testChangingIndexMode() {
+    public void testChangingIndexModeFromIndexedToStreaming() {
         ValidationTester tester = new ValidationTester();
 
         VespaModel oldModel =
-                tester.deploy(null, getServices(AbstractSearchCluster.IndexingMode.REALTIME), Environment.prod, validationOverrides).getFirst();
+                tester.deploy(null, getServices("index"), Environment.prod, validationOverrides).getFirst();
         List<ConfigChangeAction> changeActions =
-                tester.deploy(oldModel, getServices(AbstractSearchCluster.IndexingMode.STREAMING), Environment.prod, validationOverrides).getSecond();
+                tester.deploy(oldModel, getServices("streaming"), Environment.prod, validationOverrides).getSecond();
 
-        assertRefeedChange(true, // allowed=true due to validation override
-                           "Cluster 'default' changed indexing mode from 'indexed' to 'streaming'",
+        assertReindexingChange(true, // allowed=true due to validation override
+                           "Document type 'music' in cluster 'default' changed indexing mode from 'indexed' to 'streaming'",
                            changeActions);
     }
 
-    private void assertRefeedChange(boolean allowed, String message, List<ConfigChangeAction> changeActions) {
-        List<ConfigChangeAction> refeedActions = changeActions.stream()
-                                                              .filter(a -> a instanceof ConfigChangeRefeedAction)
-                                                              .collect(Collectors.toList());
-        assertEquals(1, refeedActions.size());
-        assertEquals(allowed, refeedActions.get(0).allowed());
-        assertTrue(refeedActions.get(0) instanceof ConfigChangeRefeedAction);
-        assertEquals("indexing-mode-change", ((ConfigChangeRefeedAction)refeedActions.get(0)).name());
-        assertEquals(message, refeedActions.get(0).getMessage());
+    @Test
+    public void testChangingIndexModeFromStoreOnlyToIndexed() {
+        ValidationTester tester = new ValidationTester();
+
+        VespaModel oldModel =
+                tester.deploy(null, getServices("index"), Environment.prod, validationOverrides).getFirst();
+        List<ConfigChangeAction> changeActions =
+                tester.deploy(oldModel, getServices("store-only"), Environment.prod, validationOverrides).getSecond();
+
+        assertReindexingChange(true, // allowed=true due to validation override
+                           "Document type 'music' in cluster 'default' changed indexing mode from 'indexed' to 'store-only'",
+                           changeActions);
     }
 
-    private static final String getServices(AbstractSearchCluster.IndexingMode indexingMode) {
+    private void assertReindexingChange(boolean allowed, String message, List<ConfigChangeAction> changeActions) {
+        List<ConfigChangeAction> reindexingActions = changeActions.stream()
+                                                              .filter(a -> a instanceof ConfigChangeReindexAction)
+                                                              .collect(Collectors.toList());
+        assertEquals(1, reindexingActions.size());
+        assertEquals(allowed, reindexingActions.get(0).allowed());
+        assertTrue(reindexingActions.get(0) instanceof ConfigChangeReindexAction);
+        assertEquals("indexing-mode-change", ((ConfigChangeReindexAction)reindexingActions.get(0)).name());
+        assertEquals(message, reindexingActions.get(0).getMessage());
+    }
+
+    private static final String getServices(String indexingMode) {
         return "<services version='1.0'>" +
                "  <content id='default' version='1.0'>" +
                "    <redundancy>1</redundancy>" +
                "    <documents>" +
-               "      <document type='music' mode='" +
-               (indexingMode.equals(AbstractSearchCluster.IndexingMode.REALTIME) ? "index" : "streaming") + "'/>" +
+               "      <document type='music' mode='" + indexingMode + "'/>" +
                "    </documents>" +
                "    <nodes count='1'/>" +
                "   </content>" +
